[package]
name = "caviar"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core =  { git = "https://github.com/scampion/candle" }
candle-nn =  { git = "https://github.com/scampion/candle" }
candle-transformers = { git = "https://github.com/scampion/candle" }
anyhow = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokenizers = "0.15"
serde_json = "1.0"
tower = "0.4"
axum-macros = "0.4"
env_logger = "0.9"
log = "0.4.25"
hf-hub = "0.4.1"
clap = { version = "4.0", features = ["derive"] }
